--- a/Categoria.html
+++ b/Categoria.html
@@ -3,19 +3,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="/css/style.css">
     <title>Categoria</title>
 
 </head>
 <body>
-    <h1>BENVENUTO NELLA PAGINA CATEGORIA</h1>
+    <h1 id="TITOLO"> CATEGORIA</h1>
     <nav class="head"> 
       <div class="container text-center">
         <!--sezione sopra-->
         <div class="row">
           <div class="col">
             <a class="navbar-brand" href="#">
-              <img src="immagini\GitHub-logo.png" alt="Logo" width="80px" class="d-inline-block align-text-top">
+              <img src="\immagini\GitHub-logo.png" alt="Logo" width="80px" class="d-inline-block align-text-top">
               </a>
             </div>
             <div class="col-8">
@@ -45,35 +45,118 @@
         </div>
       </div>
      </nav>
-     <div class="filters">
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-          Dropdown button
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-          Dropdown button
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-    </div>
 
+    
+<div>
+  <div class="filters">
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+        Genere
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Genere</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+        Acquista per prezzo
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+        Sconti e offerte
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Genere</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+       Taglia
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+        Colore
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Genere</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+        Vita
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+        Collezioni
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+        Sport
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
+        Caratteristiche
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+  
+
+   </div>
 
      <div id="gallery">
 
 
-     <div class="card" style="width: 200px;">
-      <img src="immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
+     <div class="card" style="width: 400px;">
+      <img src="/immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
+      <div class="card-body">
+
+        <p class="descrizione">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      </div>
+
+
+     <div class="card" style="width: 400px;">
+      <img src="/immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
       <div class="card-body">
 
         <p class="descrizione">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -82,16 +165,7 @@
 
 
     <div class="card" style="width: 400px;">
-      <img src="immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
-      <div class="card-body">
-
-        <p class="descrizione">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-
-
-    <div class="card" style="width: 400px;">
-      <img src="immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
+      <img src="/immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
       <div class="card-body">
 
         <p class="descrizione">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -99,19 +173,19 @@
     </div>
 
   </div>
-
+</div>
 <nav class="foot"> 
   <div class="container text-center">
     <!--sezione sotto-->
     <div class="row justify-content-md-center navsotto">
       <div class="row">
         <div class="col social">
-        <img src="E-commerce\immagini\image.JPEG" width="50px"></a>
-        <img src="E-commerce\immagini\image.JPEG" width="50px"></a>
-        <img src="E-commerce\immagini\image.JPEG" width="50px"></a>
-        <img src="E-commerce\immagini\image.JPEG" width="50px"></a>
-        <img src="E-commerce\immagini\image.JPEG" width="50px"></a>
-        <img src="E-commerce\immagini\image.JPEG" width="50px"></a>
+        <img src="/immagini/GitHub-logo.png" width="50px"></a>
+        <img src="/immagini/GitHub-logo.png" width="50px"></a>
+        <img src="/immagini/GitHub-logo.png" width="50px"></a>
+        <img src="/immagini/GitHub-logo.png" width="50px"></a>
+        <img src="/immagini/GitHub-logo.png" width="50px"></a>
+        <img src="/immagini/GitHub-logo.png" width="50px"></a>
         </div>
       </div>
       <div class="col-md-2 ">
