--- a/Categoria.html
+++ b/Categoria.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <link rel="stylesheet" href="/css/style.css">
+   <script src="/js/Categoria.js"></script>
     <title>Categoria</title>
 
 </head>
@@ -45,8 +46,8 @@
         </div>
       </div>
      </nav>
-
-    
+<div id="colonne">
+  <div id="col-sx"> 
 <div>
   <div class="filters">
     <div class="dropdown">
@@ -141,38 +142,48 @@
     </div>
   
 
+    </div>
+
    </div>
+  
+<div id="col-dx">
 
      <div id="gallery">
 
 
      <div class="card" style="width: 400px;">
-      <img src="/immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
+      <img src="/immagini/image.JPEG"  alt="img" id="cards">
       <div class="card-body">
-
-        <p class="descrizione">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <h1>title</h1>
+        <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
       </div>
 
 
      <div class="card" style="width: 400px;">
-      <img src="/immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
+      <img src="/immagini/image.JPEG"  alt="img" id="cards">
       <div class="card-body">
 
-        <p class="descrizione">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
     </div>
 
 
     <div class="card" style="width: 400px;">
-      <img src="/immagini/image.JPEG" class="imgtop" alt="imgtemp" id="cards">
+      <img src="/immagini/image.JPEG"  alt="img" id="cards">
       <div class="card-body">
 
-        <p class="descrizione">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
     </div>
 
   </div>
+</div>
+</div>
+
+
+
+
 </div>
 <nav class="foot"> 
   <div class="container text-center">
