--- a/Categoria.html
+++ b/Categoria.html
@@ -46,8 +46,7 @@
         </div>
       </div>
      </nav>
-<div id="colonne">
-  <div id="col-sx"> 
+
 <div>
   <div class="filters">
     <div class="dropdown">
@@ -142,38 +141,22 @@
     </div>
   
 
-    </div>
-
-   </div>
+    
   
-<div id="col-dx">
+
 
      <div id="gallery">
 
 
-     <div class="card" style="width: 400px;">
-      <img src="/immagini/image.JPEG"  alt="img" id="cards">
-      <div class="card-body">
-             <h1>title</h1>
-        <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-      </div>
-
-
-     <div class="card" style="width: 400px;">
-      <img src="/immagini/image.JPEG"  alt="img" id="cards">
-      <div class="card-body">
-
-        <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
+      
 
 
     <div class="card" style="width: 400px;">
-      <img src="/immagini/image.JPEG"  alt="img" id="cards">
+      <img src="/immagini/image.JPEG"  alt="img" class="cards">
       <div class="card-body">
 
         <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <p class="price"></p>
       </div>
     </div>
 
@@ -184,7 +167,7 @@
 
 
 
-</div>
+
 <nav class="foot"> 
   <div class="container text-center">
     <!--sezione sotto-->
