Able to remove an item from carello, automatic total price cheker

--- a/Html/Carrello.html
+++ b/Html/Carrello.html
@@ -149,7 +149,7 @@
         <h1>Il tuo carrello</h1>
         <div class="d-flex container-fluid px-0 w-auto flex-column gap-3" id="cards-container"></div>
       </div>
-      <div class="container p-3 position-sticky" id="payment-card">
+      <div class="container p-3 py-4 position-sticky rounded-2" id="payment-card">
         
       </div>
       </div>
