--- a/Html/Homepage.html
+++ b/Html/Homepage.html
@@ -18,7 +18,7 @@
       <div class="row justify-content-md-center">
         <div class="col col-sd-12">
           <a class="navbar-brand" href="#">
-            <img src="/Img/moda-fashion-logo.png" alt="Logo" width="40px" class="d-inline-block align-text-top">
+            <img src="../Img/moda-fashion-logo.png" alt="Logo" width="40px" class="d-inline-block align-text-top">
           </a>
           </div>
           <div class="col-sd-8 col-6">
@@ -44,7 +44,7 @@
    <!-- banner iniziale -->
    <div id="imgHome">
     <a href="#">
-    <img src="/Img/Technology is future.png" class="center" alt="sconti-abbigliamento">
+    <img src="../Img/Technology is future.png" class="center" alt="sconti-abbigliamento">
   </a>
   </div>
 
@@ -59,7 +59,7 @@
   <!--banner promozionale-->
   <div>
     <a href="#">
-    <img src="/Img/sconto.png" alt="sconti-abbigliamento" class="img-fluid imgPromo">
+    <img src="../Img/sconto.png" alt="sconti-abbigliamento" class="img-fluid imgPromo">
   </a> 
   </div>
 
