--- a/Categoria.html
+++ b/Categoria.html
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col">
             <a class="navbar-brand" href="#">
-              <img src="\immagini\GitHub-logo.png" alt="Logo" width="80px" class="d-inline-block align-text-top">
+              <img src="..\immagini\GitHub-logo.png" alt="Logo" width="80px" class="d-inline-block align-text-top">
               </a>
             </div>
             <div class="col-8">
@@ -152,7 +152,7 @@
 
 
     <div class="card" style="width: 400px;">
-      <img src="/immagini/image.JPEG"  alt="img" class="cards">
+      <img src="../immagini/image.JPEG"  alt="img" class="cards">
       <div class="card-body">
 
         <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -174,12 +174,12 @@
     <div class="row justify-content-md-center navsotto">
       <div class="row">
         <div class="col social">
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
+        <img src="../immagini/GitHub-logo.png" width="50px"></a>
+        <img src="../immagini/GitHub-logo.png" width="50px"></a>
+        <img src="../immagini/GitHub-logo.png" width="50px"></a>
+        <img src="../immagini/GitHub-logo.png" width="50px"></a>
+        <img src="../immagini/GitHub-logo.png" width="50px"></a>
+        <img src="../immagini/GitHub-logo.png" width="50px"></a>
         </div>
       </div>
       <div class="col-md-2 ">
