--- a/Html/headerfooter.html
+++ b/Html/headerfooter.html
@@ -12,7 +12,7 @@
       <div class="row justify-content-md-center">
         <div class="col col-sd-12">
           <a class="navbar-brand" href="#">
-            <img src="/Img/moda-fashion-logo.png" alt="Logo" width="50px" class="d-inline-block align-text-top">
+            <img src="../Img/moda-fashion-logo.png" alt="Logo" width="50px" class="d-inline-block align-text-top">
           </a>
         </div>
         <div class="col-sd-8 col-6">
