--- a/Html/Carrello.html
+++ b/Html/Carrello.html
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col">
             <a class="navbar-brand" href="#">
-              <img src="/Img/GitHub-logo.png" alt="Logo" width="80px" class="d-inline-block align-text-top">
+              <img src="../Img/GitHub-logo.png" alt="Logo" width="80px" class="d-inline-block align-text-top">
               </a>
             </div>
             <div class="col-8">
