--- a/Categoria.html
+++ b/Categoria.html
@@ -10,141 +10,162 @@
 </head>
 <body>
     <h1 id="TITOLO"> CATEGORIA</h1>
-    <nav class="head"> 
-      <div class="container text-center">
-        <!--sezione sopra-->
-        <div class="row">
-          <div class="col">
-            <a class="navbar-brand" href="#">
-              <img src="\immagini\GitHub-logo.png" alt="Logo" width="80px" class="d-inline-block align-text-top">
-              </a>
-            </div>
-            <div class="col-8">
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-          <div class="col">
+  
+
+
+
+  <!--HEADER-->
+  <nav class="head">
+    <div class="container text-center">
+      <!--sezione sopra-->
+      <div class="row justify-content-md-center">
+        <div class="col col-sd-12">
+          <a class="navbar-brand" href="#">
+            <img src="/immagini/GitHub-logo.png" alt="Logo" width="50px" class="d-inline-block align-text-top">
+          </a>
+        </div>
+        <div class="col-sd-8 col-6">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+        <div class="col col-sd-2">
           <a href="#" class="btn btn-outline-success cart"><i class="fa-solid fa-cart-shopping"></i></a>
-          </div>
         </div>
-        <!--sezione sotto-->
-        <div class="row justify-content-md-center navsotto">
-          <div class="col-sm-6 col-md-2 navcat">
-            <a class="nav-link" href="#">Donna</a>
-          </div>
-          <div class="col-sm-6 col-md-2 navcat">
-            <a class="nav-link" href="#">Uomo</a>
-          </div>
-          <div class="col-sm-6 col-md-2 navcat">
-            <a class="nav-link" href="#">Gioielli</a>
-          </div>
-          <div class="col-sm-6 col-md-2 navcat">
-            <a class="nav-link" href="#">Elettronica</a>
-          </div>
-        </div>
+
       </div>
-     </nav>
 
-<div>
-  <div class="filters">
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-        Genere
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Genere</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-        Acquista per prezzo
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-        Sconti e offerte
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Genere</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-       Taglia
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-        Colore
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Genere</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-        Vita
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-        Collezioni
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-        Sport
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="button">
-        Caratteristiche
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-  
-
-    
-  
-
-
+  </nav>
+<!--filtri ricerca-->
+<div class="filtri">
+  <!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia">Generali</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div>
+  <!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia"> Acquista per prezzo</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div>
+  <!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia">Sconti e offerte</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div>
+  <!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia">Size</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div>
+  <!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia">Colore</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div>
+  <!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia">Vita</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div><!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia">Collezioni</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div>
+  <!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia">Sport</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div>
+  <!-- Example split danger button -->
+  <div class="bottoni">
+    <button type="button" class="schiaccia">Caratteristiche</button>
+    <button type="button" class="schiaccia dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+      <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+  </div>
+  </div>
+       
      <div id="gallery">
 
 
@@ -158,6 +179,7 @@
         <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <p class="price"></p>
       </div>
+      <button type="button">Compra</button>
     </div>
 
   </div>
@@ -168,41 +190,51 @@
 
 
 
-<nav class="foot"> 
+<!--FOOTER-->
+<nav class="foot">
   <div class="container text-center">
-    <!--sezione sotto-->
+    <!--sezione link-->
     <div class="row justify-content-md-center navsotto">
       <div class="row">
-        <div class="col social">
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
-        <img src="/immagini/GitHub-logo.png" width="50px"></a>
+
+      </div>
+
+      <div class="w-100 d-block d-md-none divisorio d-lg-none d-sm-block"></div>
+      <div class="col">
+        <br>
+        <span class="spanfoot">DOMANDE</span><br>
+        <span><a href="www.sito.com/faq">FAQ</a></span><br>
+        <span><a href="www.sito.com/contatti">Contatti</a> </span><br>
+
+      </div>
+      <div class="col">
+        <br><span class="spanfoot">SPEDIZIONE</span><br>
+        <span><a href="www.sito.com/spedizioni">Corriere </a></span><br>
+        <span><a href="www.sito.com/reso">Reso</a> </span><br>
+
+      </div>
+      <div class="col">
+        <br><span class="spanfoot">PAGAMENTI</span><br>
+        <span><a href="www.sito.com/modalita">Modalità </a></span><br>
+        <span><a href="www.sito.com/buono-regalo">Buono regalo</a> </span><br>
+      </div>
+      <!-- sezione social e dati -->
+      <div class="row">
+        <div class="social">
+          <div>Seguici su:</div>
+          <a href="www.facebook/sito"><i class="fa-brands fa-facebook"></i></a>
+          <a href="www.instagram/sito"><i class="fa-brands fa-instagram"></i></a>
+          <a href="www.twitter/sito"><i class="fa-brands fa-twitter"></i></a>
+          <a href="www.tiktok/sito"><i class="fa-brands fa-tiktok"></i></a>
         </div>
       </div>
-      <div class="col-md-2 ">
-        <a class="nav-link" href="#">blocco 1</a>
-        <span>blabla</span><br>
-        <span>blabla</span><br>
-        <span>blabla</span><br>
-      </div>
-      <div class="col-md-2 ">
-        <a class="nav-link" href="#">blocco 2</a>
-        <span>blabla</span><br>
-        <span>blabla</span><br>
-        <span>blabla</span><br>
-      </div>
-      <div class="col-md-2 ">
-        <a class="nav-link" href="#">blocco 3</a>
-        <span>blabla</span><br>
-        <span>blabla</span><br>
-        <span>blabla</span><br>
-      </div>
     </div>
-  </div>
- </nav>
+    <div class="dati">
+      Group2 S.p.A. | Sede Amministrativa e Sede Legale: Via Roma n. 1 – 00100 Roma (RM), Italia | Copyright 2025 ©
+      Group2 – PEC:
+      group2@pec.it
+    </div>
+</nav>
 
     <script src="https://kit.fontawesome.com/b7c0adacbf.js" crossorigin="anonymous"></script>  
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
