--- a/Html/Homepage.html
+++ b/Html/Homepage.html
@@ -178,9 +178,9 @@
         </div>
    </nav>
 
-   <script src="/Javascript/header.js"></script>
+   <script src="../Javascript/header.js"></script>
       <script src="https://kit.fontawesome.com/b7c0adacbf.js" crossorigin="anonymous"></script>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/Javascript/homepage.js"></script>
+    <script src="../Javascript/homepage.js"></script>
   </body>
 </html>
