--- a/Html/Prodotto.html
+++ b/Html/Prodotto.html
@@ -7,41 +7,41 @@
     <link rel="stylesheet" href="../Css/Base.css">
     <link rel="stylesheet" href="../Css/Prodotto.css">
     <script src="../Javascript/ecommerce.js" defer></script> 
+    <script src="../Javascript/header.js" defer></script>
 
    
     
      <title>Document</title>
 </head>
     <body>
-
-  
-     <!--HEADER-->
- <nav class="head"> 
+ <!--HEADER-->
+ <nav class="head">
   <div class="container text-center">
     <!--sezione sopra-->
     <div class="row justify-content-md-center">
       <div class="col col-sd-12">
         <a class="navbar-brand" href="#">
-          <img src="../Img/GitHub-logo.png" alt="Logo" width="80px" class="d-inline-block align-text-top">
+          <img src="../Img/moda-fashion-logo.png" alt="Logo" width="50px" class="d-inline-block align-text-top">
         </a>
-        </div>
-        <div class="col-sd-8 col-6">
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-        <div class="col col-sd-2">
-          <a href="#" class="btn btn-outline-success cart"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-
       </div>
-      <!--sezione sotto-->
-      <div class="row justify-content-md-center navsotto" id="nav-bar-cat">
-
+      <div class="col-sd-8 col-6">
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
+      <div class="col col-sd-2">
+        <a href="#" class="btn btn-outline-success cart"><i class="fa-solid fa-cart-shopping"></i></a>
+      </div>
+
     </div>
-  </nav>
+    <!--sezione sotto-->
+    <div class="row justify-content-md-center navsotto" id="nav-bar-cat">
+
+    </div>
+  </div>
+</nav>
+
 
 
 <!--Visualizzazione del prodotto con la miniatura e la descrizione con la possibilità di sceglliere il colore e la taglia -->
@@ -99,9 +99,11 @@
         </div>
    </nav>
 
-   <script src="../Javascript/header.js"></script>
-      <script src="https://kit.fontawesome.com/b7c0adacbf.js" crossorigin="anonymous"></script>  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../Javascript/homepage.js"></script>
-  </body>
+  <!-- SCRIPT PER RICHIAMARE ICONE E JS -->
+
+<script src="https://kit.fontawesome.com/b7c0adacbf.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+
 </html>
