--- a/Html/Carrello.html
+++ b/Html/Carrello.html
@@ -71,8 +71,8 @@
                 <input type="text" class="form-control" id="inputScadenza">
               </div>
               <div class="col-md-2">
-                <label for="inputCvc" class="form-label">CVC</label>
-                <input type="text" class="form-control" id="inputCvc">
+                <label for="inputCvv" class="form-label">CVV</label>
+                <input type="text" class="form-control" id="inputCvv">
               </div>
               <div class="col-12">
                 <div class="form-check">
