--- a/Html/headerfooter.html
+++ b/Html/headerfooter.html
@@ -22,9 +22,12 @@
           </form>
         </div>
         <div class="col col-sd-2">
-          <a href="#" class="btn btn-outline-success cart"><i class="fa-solid fa-cart-shopping"></i></a>
+        <div class="col col-sd-2">
+          <a href="../Profilo.html" class="btn btn-outline-success profile">
+            <i class="fa-solid fa-user"></i></a>
+        <a href="#" class="btn btn-outline-success cart"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
-
+        
       </div>
       <!--sezione sotto-->
       <div class="row justify-content-md-center navsotto" id="nav-bar-cat">
