modificato header per tutte le pagine

--- a/Html/Homepage.html
+++ b/Html/Homepage.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col col-sd-2">
         <div class="col col-sd-2">
-          <a href="../Html/Profilo.html" class="btn btn-outline-success profile">
+          <a href="../Html/Profile.html" class="btn btn-outline-success profile">
             <i class="fa-solid fa-user"></i></a>
         <a href="../Html/Carrello.html" class="btn btn-outline-success cart"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
