--- a/Html/Categoria.html
+++ b/Html/Categoria.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   <link rel="stylesheet" href="../Css/style.css">
-   <script src="../Javascript/Categoria.js"></script>
+    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../Css/Base.css">
+    <script src="../Javascript/Categoria.js"></script>
     <title>Categoria</title>
 
 </head>
@@ -43,7 +44,7 @@
     </div>
   </div>
  </nav>
- 
+
 <!--filtri ricerca-->
 <div class="filtri">
   <div id="rate">
