added script header in Carrello

--- a/Html/Carrello.html
+++ b/Html/Carrello.html
@@ -205,5 +205,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../Javascript/Carrello.js"></script>
+    <script src="../Javascript/header.js"></script>
   </body>
 </html>
