--- a/Html/Register.html
+++ b/Html/Register.html
@@ -20,10 +20,13 @@
                 <input type="text" class="form-control item" id="name" placeholder="Name">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control item" id="sername" placeholder="Surname">
+                <input type="text" class="form-control item" id="surname" placeholder="Surname">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control item" id="partita" placeholder="Partita IVA">
+                <input type="text" class="form-control item" id="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control item" id="piva" placeholder="Tax ID">
             </div>
             <div class="form-group">
                 <input type="text" class="form-control item" id="email" placeholder="Email">
