--- a/Html/Login.html
+++ b/Html/Login.html
@@ -70,5 +70,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"
     ></script>
     <script src="assets/js/script.js"></script>
+    <script src="../Javascript/Login.js"></script>
   </body>
 </html>
