--- a/Html/Profile.html
+++ b/Html/Profile.html
@@ -70,7 +70,7 @@
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
-                    <h6 class="mb-0">Address</h6>
+                    <h6 class="mb-0">Username</h6>
                   </div>
                   <div class="col-sm-9 text-sm-end text-secondary">
                     Bay Area, San Francisco, CA
